Fix styling: padding task name and signout button on small device

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,6 @@
 
 @media screen and (max-width: 464px) {
   nav {
-    padding-bottom: 20px !important;
+    padding-bottom: 15px !important;
   }
 }
